[package]
name = "ssql"
version = "0.1.0"
edition = "2021"
authors = ["Geo W"]
description = "Async ms sql server basic orm"
keywords = ["async", "database", "sqlserver", "orm", "tiberius"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Geo-W/ssql"
readme = "README.md"


[features]
polars = ["ssql-macro/polars", "dep:polars"]

[dependencies]
ssql-macro = { version = "0.1.0", path = "ssql-macro" }
tiberius = { version = "0.12.2", features = ["chrono"] }
serde_json = "1.0.99"
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
futures-lite = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.68"

[dependencies.polars]
version = "0.31.0"
optional = true
#default-features = false

[dev-dependencies]
deadpool-tiberius = "0.1.3"
chrono = "0.4.26"