[package]
name = "ssql"
version = "0.2.0"
edition = "2021"
authors = ["Geo W"]
description = "Async ms sql server basic orm"
keywords = ["async", "database", "sqlserver", "orm", "tiberius"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Geo-W/ssql"
readme = "README.md"
exclude = ["/.idea/"]


[features]
polars = ["ssql-macro/polars", "dep:polars"]
chrono = ["tiberius/chrono", "dep:chrono"]
serde = ["dep:serde", "dep:serde_json", "chrono/serde", "ssql-macro/serde" ]

[dependencies]
ssql-macro = { version = "0.2.0", path = "ssql-macro" }
tiberius = { version = "0.12.2"}
tokio = { version = "1.37.0", features = ["rt", "net"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
futures-lite = "2.3.0"
#async-trait = "0.1.68"

[dependencies.polars]
version = "0.39.2"
optional = true
#default-features = false

[dependencies.chrono]
version = "0.4.31"
optional = true
features = ["serde"]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dev-dependencies]
deadpool-tiberius = "0.1.8"
chrono = { version = "0.4.38", features = ['serde'] }
tiberius = { version = "0.12.2", features=["chrono"]}
tokio = { version = "1.24.1", features = ["rt", "net", "macros"] }
serde = {version = "1.0", features = ["derive"]}