[package]
name = "rssql-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
polars = []

[dependencies]
syn = { version = "2.0.22", features = ["full", "extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.56"

[lib]
name = "rssql_macro"
proc-macro = true