[package]
name = "ssql-macro"
version = "0.1.3"
edition = "2021"
authors = ["Geo W"]
description = "Macro for ssql -- an sync ms sql server basic orm"
keywords = ["async", "database", "sqlserver", "orm", "tiberius"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Geo-W/ssql"
readme = "README.md"


[features]
polars = []

[dependencies]
syn = { version = "2.0.22", features = ["full", "extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.56"

[lib]
name = "ssql_macro"
proc-macro = true